# AlphaB0t-engine

./: .gitignore  APIDOCS.md  Dockerfile  Makefile  README.md  bot.json  config.py  constants.py  example.env  main.py  pyproject.toml  requirements.txt
AI/: constants.py  json_helper.py  model_constants.py  predict.py  train_model.py
Kraken/: README.md  authenticated_kraken.py  authentication.py  kraken_signature.py  main.py  public_kraken.py
ML/: model_constants.py  predict.py  train_model.py
Robinhood Crypto/: README.md  bot.py  bounded_algorithm.py  config.py  error_queue.py  grid_bot.py  helpers.py  main.py  order.py
RobinhoodCrypto/: adaptive_algorithm.py  error_queue.py  grid_bot.py  helpers.py
app/: __init__.py
app/bots/: README.md  gridbot.py
app/database/: data_access.py
app/enums/: enums.py
app/helpers/: format.py  json_util.py
app/models/: bot.py  error.py  exchange.py  grid.py  grid_bot.py  gridbot.py  ohlc.py  order.py  result.py  sentimentbot.py  user.py
app/models/Strategy/: STRATEGYFORMATION.md  gridbot.py  order.py
app/models/Strategy/ML/: clean_data.py  (+4 more)
app/strategies/: gridbot_rh.py  ohlc.py  strategy.py  techinical_analysis.py
app/strategies/ML/: train_model.py
app/views/: api.py
models/: exchange.py  grid_trading_bot.py
spot-grid-trading-bot/: __init__.py
spot-grid-trading-bot/models/: exchange.py  grid_trading_bot.py
spot-grid-trading-bot/views/: api.py
src/: main.cpp
src/Car/: car.h
src/Power/: power.h
src_cpp/: backtest.cpp  main.cpp
src_cpp/Result/: result.h
tests/: test.env  test_kraken.py
