[tool.poetry]
name = "AlphaB0t"
version = "0.3.0"
description = "A cryptocurrency trading application"
authors = ["Tyler Pruitt"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
Flask = "2.3.2"
Flask-SQLAlchemy = "3.0.2"
psycopg2-binary = "^2.9.10"
SQLAlchemy = "2.0.16"
Flask-Migrate = "2.7.0"
flask-cors = "6.0.0"
python-dotenv = "1.0.0"
cryptography = "^44.0.1"
requests = "^2.32.4"
dotenv = "^0.9.9"
pandas = "^3.0.0"
scikit-learn = "^1.8.0"
numpy = "1.26"
tensorflow = "2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
